syntax = "proto3";

// Language Dependent Statements Start
option java_package = "ericsson.core.nrf.dbproxy.grpc.nfmessage.nfprofile";
option java_outer_classname = "NFProfileGetRequestProto";
option go_package = "com/dbproxy/nfmessage/nfprofile";
package grpc;
import "nfmessage/nfprofile/NFProfileFilter.proto";
// Language Dependent Statements End

message NFProfileGetRequest {
    oneof data {
        string target_nf_instance_id = 1;
        NFProfileFilter filter       = 2;
        string fragment_session_id   = 3;
    }
}
