syntax = "proto3";

// Language Dependent Statements Start
option java_package = "ericsson.core.nrf.dbproxy.grpc.nfmessage.nrfprofile";
option java_outer_classname = "NRFProfilePutRequestProto";
option go_package = "com/dbproxy/nfmessage/nrfprofile";
package grpc;
import "nfmessage/nrfprofile/NRFProfileIndex.proto";
// Language Dependent Statements End

message NRFProfilePutRequest {
    string nrf_instance_id    = 1;
    NRFProfileIndex index     = 2;
    bytes raw_nrf_profile     = 3;
}

